# QuadOS

./: .gitignore  Cargo.toml  Makefile  README.md  quados  quados.yaml  rust-toolchain.toml
.cargo/: config.toml
drivers/base/: Cargo.toml
drivers/base/src/: lib.rs
drivers/sdcard/: Cargo.toml
drivers/sdcard/src/: lib.rs  regs.rs
drivers/virtio/: Cargo.toml
drivers/virtio/src/: lib.rs  virtio_blk.rs  virtio_impl.rs  virtio_input.rs  virtio_net.rs
fs/base/: Cargo.toml
fs/base/src/: lib.rs
fs/ramfs/: Cargo.toml
fs/ramfs/src/: lib.rs
kernel/: Cargo.toml  build.rs
kernel/linker/: linker.lds.S
kernel/src/: config.rs  lang_items.rs  main.rs  pci.rs  utils.rs
kernel/src/mem/: allocator.rs  frames.rs  mod.rs
kernel/src/task/: memset.rs  mod.rs  schedular.rs  task.rs
resources/iso/boot/grub/: grub.cfg
scripts/: cargo.py  config.py  qemu.py
