[package]
name = "quados"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
polyhal = { version = "0.1.3", features = ["logger"] }
buddy_system_allocator = "0.10.0"
fdt = "0.1.5"
virtio = { path = "../drivers/virtio" }
spin = { version = "0.9", features = ["lock_api"]}
base = { path = "../drivers/base" }
